<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow"
    android:padding="10dp"

    android:fillViewport="true">

    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/chat_input_layout"
        android:layout_alignParentTop="true"
        android:background="@color/gold_tint"
        android:divider="@android:color/darker_gray"
        android:padding="10dp"
        android:fillViewport="true"
        />

    <RelativeLayout
            android:id="@+id/chat_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:background="@color/gold_tint"
            >

        <EditText
            android:id="@+id/chat_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:layout_toLeftOf="@id/send_button"
            android:hint="@string/hint_chat_text"
            android:inputType="text"
            android:minHeight="48dp" />
            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/send"
                />

        </RelativeLayout>

</RelativeLayout>