...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/start_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:onClick="onStartChatClicked"
        android:text="@string/start_chat"
        app:layout_constraintStart_toStartOf="@+id/main_button"
        app:layout_constraintTop_toBottomOf="@+id/main_button" />

    <Button
        android:id="@+id/test_toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:onClick="onTestToolbarClicked"
        android:text="@string/test_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
...
