<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_text">Hello World! Welcome to my App!</string>
    <string name="button_text">I\'m a Button</string>
    <string name="login_text">Login</string>
    <string name="pass_text">Password</string>
    <string name="login_hint">Login username</string>
    <string name="pass_hint">Login Password</string>
    <string name="switch_text">What does this do?</string>
    <string name="radio_text">Radio Button</string>
    <string name="checkbox_text">Checkbox</string>
    <string name="imagebutton_text">Camera Image Button</string>
    <string name="img_button_desc">Image Button</string>

    <string name="login_msg">Login email Saved</string>
    <string name="preference_name">loginPref</string>
    <string name="preference_key_profile_email">Login email Saved</string>
    <string name="dialog_msg">Do you want to exit Activity?</string>
    <string name="dialog_title">Exit Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="incr_email">Invalid Username. Try Again.</string>
    <string name="incr_passwd">Invalid Password. Try Again.</string>
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="msgListItems">ListItemsActivity passed: My Information to Share.</string>


    <string name="start_chat">Start Chat</string>
    <string name="hint_chat_text">Type a Message</string>
    <string name="send">Send</string>

    <string name="test_toolbar">Test Toolbar</string>
    <string name="about">App v1.0, by Shoieb Ur Rahman Thayal</string>
    <string name="item1_selected">Item 1 selected</string>
    <string name="exit_title">Do you want to go back?</string>
    <string name="exit_ques">Exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="weather_forecast">Weather Forecast</string>
    <string-array name="cities_array">
        <item>Toronto</item>
        <item>Waterloo</item>
        <item>Vancouver</item>
        <item>Windsor</item>
        <item>Calgary</item>
        <item>Guelph</item>
    </string-array>



    <!-- Strings used for fragments for navigation -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>