<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/opt_1"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_dialog_email"
        android:orderInCategory="101"
        android:title="One" />

    <item
        android:id="@+id/opt_2"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_lock_idle_low_battery"
        android:orderInCategory="102"
        android:title="Two"
        />

    <item
        android:id="@+id/opt_3"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="103"
        android:title="Three" />

    <item
        android:id="@+id/about"
        app:showAsAction="never"
        android:orderInCategory="103"
        android:title="About" />

</menu>